--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -31,6 +31,37 @@ jobs:
         SUBREDDIT_NAME: ${{ secrets.SUBREDDIT_NAME }}
       run: |
         python3 main.py
+              - name: Direct Reddit OAuth token check
+        env:
+          REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
+          REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
+          REDDIT_USERNAME: ${{ secrets.REDDIT_USERNAME }}
+          REDDIT_PASSWORD: ${{ secrets.REDDIT_PASSWORD }}
+          REDDIT_USER_AGENT: ${{ secrets.REDDIT_USER_AGENT }}
+        run: |
+          python3 - <<'PY'
+import os, requests, sys
+
+cid = os.getenv("REDDIT_CLIENT_ID")
+csec = os.getenv("REDDIT_CLIENT_SECRET")
+user = os.getenv("REDDIT_USERNAME")
+pw = os.getenv("REDDIT_PASSWORD")
+ua = os.getenv("REDDIT_USER_AGENT", "darknet_daily_bot_v1.0")
+
+print("Performing direct OAuth token request...")
+
+r = requests.post(
+    "https://www.reddit.com/api/v1/access_token",
+    auth=(cid, csec),
+    data={"grant_type": "password", "username": user, "password": pw},
+    headers={"User-Agent": ua},
+    timeout=10
+)
+
+print("HTTP Status:", r.status_code)
+print("Response:", r.text[:500])
+PY
+
 
     - name: Commit updated state.json
       run: |
