Refactor GitHub Actions workflow for bot
Updated the GitHub Actions workflow to install dependencies from requirements.txt and reorganized the job steps for clarity.

--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -3,7 +3,7 @@ name: run-bot
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 14 * * *'  # adjust to your desired schedule if needed
+    - cron: '0 14 * * *'
 
 jobs:
   run:
@@ -19,28 +19,18 @@ jobs:
         python-version: '3.11'
 
     - name: Install dependencies
-      run: pip install praw
+      run: pip install -r requirements.txt
 
-    - name: Run bot
+    - name: Direct Reddit OAuth token check
       env:
         REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
         REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
         REDDIT_USERNAME: ${{ secrets.REDDIT_USERNAME }}
         REDDIT_PASSWORD: ${{ secrets.REDDIT_PASSWORD }}
         REDDIT_USER_AGENT: ${{ secrets.REDDIT_USER_AGENT }}
-        SUBREDDIT_NAME: ${{ secrets.SUBREDDIT_NAME }}
       run: |
-        python3 main.py
-              - name: Direct Reddit OAuth token check
-        env:
-          REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
-          REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
-          REDDIT_USERNAME: ${{ secrets.REDDIT_USERNAME }}
-          REDDIT_PASSWORD: ${{ secrets.REDDIT_PASSWORD }}
-          REDDIT_USER_AGENT: ${{ secrets.REDDIT_USER_AGENT }}
-        run: |
-          python3 - <<'PY'
-import os, requests, sys
+        python3 - <<'PY'
+import os, requests
 
 cid = os.getenv("REDDIT_CLIENT_ID")
 csec = os.getenv("REDDIT_CLIENT_SECRET")
@@ -55,13 +45,21 @@ r = requests.post(
     auth=(cid, csec),
     data={"grant_type": "password", "username": user, "password": pw},
     headers={"User-Agent": ua},
-    timeout=10
 )
 
 print("HTTP Status:", r.status_code)
 print("Response:", r.text[:500])
 PY
 
+    - name: Run bot
+      env:
+        REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
+        REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
+        REDDIT_USERNAME: ${{ secrets.REDDIT_USERNAME }}
+        REDDIT_PASSWORD: ${{ secrets.REDDIT_PASSWORD }}
+        REDDIT_USER_AGENT: ${{ secrets.REDDIT_USER_AGENT }}
+        SUBREDDIT_NAME: ${{ secrets.SUBREDDIT_NAME }}
+      run: python3 main.py
 
     - name: Commit updated state.json
       run: |
