--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -19,7 +19,7 @@ jobs:
         python-version: '3.11'
 
     - name: Install dependencies
-      run: pip install -r requirements.txt
+      run: pip install praw
 
     - name: Direct Reddit OAuth token check
       env:
@@ -68,6 +68,6 @@ PY
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add state.json
-          git commit -m "Update state.json" || echo "No changes to commit"
+          git commit -m "Update state.json" || echo "No changes"
           git push
         fi
